# multrenizer

./: .gitignore  LICENSE  README.md  benchmark.py  benchmark_results.json  prepare_data.py  pyproject.toml  requirements.txt  train_tokenizer.py
multrenizer-tokenizer/: special_tokens_map.json  tokenizer.json  tokenizer_config.json
tests/: test_benchmark.py  test_train_tokenizer.py
